Opened 7 years ago
Closed 7 years ago
#13842 closed bug (fixed)
[StyledEdit] Crashes when the user reopen ReplaceWindow
Reported by: | Janus | Owned by: | Janus |
---|---|---|---|
Priority: | normal | Milestone: | Unscheduled |
Component: | Applications/StyledEdit | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description (last modified by )
How to reproduce the problem:
- open Replace...
- close the window with the close button in the titlebar
- open Replace...
There is a crash
Change History (2)
comment:1 by , 7 years ago
Description: | modified (diff) |
---|
comment:2 by , 7 years ago
Resolution: | → fixed |
---|---|
Status: | assigned → closed |
Note:
See TracTickets
for help on using tickets.
Fixed in hrev51662