StyledEdit: avoid crash on replace window

* Fixes #13842