src/apps/stylededit/Constants.h
@@ -44,6 +44,7 @@ const uint32 MSG_REPLACE				= 'msre';
 const uint32 MSG_REPLACE_ALL			= 'mrea';
 const uint32 MSG_HIDE_WINDOW			= 'mhdw';
 const uint32 MSG_FIND_WINDOW_QUIT		= 'mfwq';
+const uint32 MSG_REPLACE_WINDOW_QUIT	= 'mrwq';
 
 // "Font"-menu
 const uint32 FONT_SIZE					= 'FMsi';
